# dali2mqtt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plan.md  platformio.ini
Kconfig/: Kconfig.projbuild
LICENSES/: GPL-2.0-or-later.txt
esp-idf/: CMakeLists.txt
esp32/: CMakeLists.txt  ESPTest.cmake  idf_buildup.cmake  sdkconfig.default  test_cases.c
esp32/Kconfig/: Kconfig.projbuild
esp32/etc/: build_firmware.cmake  idf_buildup.cmake  make_esp_test_target.cmake  size_components.cmake
esp32s3/: CMakeLists.txt  idf_buildup.cmake  partitions.csv  sdkconfig.default
esp32s3/Debug/: sdkconfig.default
esp32s3/Kconfig/: Kconfig.projbuild
esp32s3/Release/: sdkconfig.default
src/: CMakeLists.txt  main.cxx
src/DaliMQTT/: CMakeLists.txt  main.cxx  pch.hxx
src/DaliMQTT/config/: ConfigManager.cxx  ConfigManager.hxx  SyslogConfig.cxx  SyslogConfig.hxx
src/DaliMQTT/dali/: DaliAPI.cxx  DaliAPI.hxx  DaliAdapter.cxx  DaliAdapter.hxx  DaliAddressMap.cxx  DaliAddressMap.hxx  DaliCommandProcessor.cxx  DaliCommandProcessor.hxx  DaliCommands.hxx  DaliCommon.hxx  DaliControlGear.hxx  DaliDT8.hxx  DaliDeviceController.cxx  DaliDeviceController.hxx  DaliDeviceIdentity.hxx  DaliDriver.cxx  DaliDriver.hxx  DaliGroupManagement.cxx  DaliGroupManagement.hxx  DaliInputDevice.hxx  DaliSceneManagement.cxx  DaliSceneManagement.hxx  DaliSnifferFrameHandler.cxx  DaliTypes.hxx  DaliСommon.hxx
src/DaliMQTT/dali/driver/: DALIDriver.cpp  DaliDriver.cpp  DaliDriver.cxx  DaliDriver.hpp  DaliDriver.hxx  dali_commands.h
src/DaliMQTT/driver/: CMakeLists.txt
src/DaliMQTT/driver/dalic/: dali.c  dali_debug.c  dali_sniffer.c
src/DaliMQTT/driver/dalic/include/: dali.h  dali_debug.h  dali_priv_defs.h
src/DaliMQTT/driver/libdali/: DALI_Lib.hpp
src/DaliMQTT/include/utils/: DaliLongAddrConversions.hxx  FileHandle.hxx  NvsHandle.hxx  StringUtils.hxx
src/DaliMQTT/lifecycle/: Lifecycle.hxx  LifecycleBase.cxx  LifecycleMQTT.cxx  OTAUpdater.cxx  OTAUpdater.hxx
src/DaliMQTT/mqtt/: HADiscovery.cxx  HADiscovery.hxx  MQTTClient.cxx  MQTTClient.hxx  MQTTCommandHandler.cxx  MQTTCommandHandler.hxx  MQTTCommandProcess.cxx  MQTTCommandProcess.hxx  MQTTDiscovery.cxx  MQTTDiscovery.hxx
src/DaliMQTT/system/: AppController.cxx  AppController.hxx  AppUpdateManager.cxx  AppUpdateManager.hxx  ConfigManager.cxx  ConfigManager.hxx  SyslogConfig.cxx  SyslogConfig.hxx  SystemControl.cxx  SystemControl.hxx  SystemHardwareControls.cxx  SystemHardwareControls.hxx
src/DaliMQTT/webui/: WebUI.cxx  WebUI.hxx  index.html
src/DaliMQTT/webui/api/: ConfigController.cxx  DaliSetupController.cxx  InfoController.cxx  OtaController.cxx
src/DaliMQTT/webui/cxx/: WebUI.cxx  WebUI.hxx
src/DaliMQTT/webui/cxx/api/: Config.cxx  ConfigController.cxx  DaliSetupController.cxx  Info.cxx  InfoController.cxx
src/DaliMQTT/webui/js/: App.vue  api.ts
src/DaliMQTT/webui/js/components/: DaliSceneEditor.vue  DaliSetup.vue  DevicesPage.vue  InfoPage.vue  SettingsPage.vue  StatusPage.vue
src/DaliMQTT/wifi/: Wifi.cxx  Wifi.hxx
src/DaliMQX/: Bridge.ts  bridge.ts  index.ts  package.json  rollup.config.js  tsconfig.json
src/DaliMQX/driver/: FunctionalAdapter.ts  MqttJsAdapter.ts
src/DaliMQX/drivers/: functional-adapter.ts
src/DaliMQX/entities/: Device.ts  Group.ts  Input.ts  group.ts  input.ts
src/DaliMQX/interfaces/: Common.ts  mqtt-driver.ts
src/DaliMQX/src/: types.ts
src/DaliMQX/src/drivers/: mqtt-js-adapter.ts
src/DaliMQX/src/entities/: device.ts
src/DaliMQX/src/utils/: color.ts
src/common/: CMakeLists.txt
src/common/config/: CMakeLists.txt
src/common/dali/: CMakeLists.txt
src/common/dali/src/: DALI.cpp  DALI.hpp  dali_commander.cpp  dali_commander.hpp  light_controller.cpp  light_controller.hpp  mqtt_protocol.cpp  mqtt_protocol.hpp
src/common/dali/test/: CMakeLists.txt
src/config/: ConfigManager.cxx  ConfigManager.hxx
src/dali/: DaliAPI.cxx  DaliAPI.hxx
src/driver/: CMakeLists.txt
src/driver/dalic/: dali.c
src/esp32/: CMakeLists.txt  DALI_Task.cpp  main.c  main.cpp
src/esp32/dalic/: CMakeLists.txt
src/esp32/dalic/include/: dali.h
src/esp32/driver/: dali.c
src/esp32/driver/dalic/: CMakeLists.txt
src/esp32/driver/include/: dali.h
src/esp32/modules/: CMakeLists.txt
src/esp32/modules/config/: CMakeLists.txt  ConfigManager.c  ConfigManager.cpp  ConfigManager.h  ConfigManager.hpp  app_config.h  combine_u32_to_u64.h  config.c  config.h  definitions.h  init_step_handler.h
src/esp32/modules/dali/: CMakeLists.txt  dali_interface.c  dali_interface.h
src/esp32/modules/dali/test/: CMakeLists.txt
src/esp32/modules/driver/: CMakeLists.txt
src/esp32/modules/ethernet/: CMakeLists.txt  ethernet.c  ethernet.h
src/esp32/modules/mqtt/: CMakeLists.txt  mqtt.c  mqtt.h
src/esp32/modules/mqtt/mqtt_client/: dali_mqtt_client.c  dali_mqtt_client.h  mqtt_client.cpp  mqtt_client.hpp
src/esp32/modules/mqtt/mqtt_protocol/: mqtt_protocol.cpp  mqtt_protocol.hpp
src/esp32/modules/wifi/: wifi_manager.c  wifi_manager.h
src/esp32/runtime/: CMakeLists.txt  DALI_Runtime.c  DALI_Runtime.cpp  DALI_Runtime.h  DALI_Runtime.hpp
src/esp32/tests/: CMakeLists.txt
src/esp32/tests/config/: config.test.c
src/include-add/utils/: NvsHandle.hxx
src/lifecycle/: Lifecycle.hxx  LifecycleBase.cxx  LifecycleBase.hxx  LifecycleMQTT.cxx  LifecycleRuntime.cxx
src/mqtt/: MQTTClient.cxx  MQTTClient.hxx  MQTTDiscovery.cxx  MQTTDiscovery.hxx
src/webui/: WebUI.cxx  WebUI.hxx  index.html  package.json  tsconfig.app.json  vite.config.ts
src/webui/cxx/: WebUI.cxx  WebUI.hxx
src/webui/js/: App.vue
src/webui/src/: App.vue  api.ts
src/webui/src/components/: Info.vue  SettingsPage.vue
src/wifi/: Wifi.cxx  Wifi.hxx
tests/: CMakeLists.txt  test_cases.c  test_cases.cxx
tests/config/: ConfigManager.test.cxx
tests/dali/: DaliAPI.test.cxx  DaliLogic.test.cxx
tests/esp32s3/Debug/: sdkconfig.default
tests/lifecycle/: Lifecycle.test.cxx
tests/mqtt/: MQTTClient.test.cxx  MqttLogic.test.cxx
tests/system/: ConfigManager.test.cxx
tests/webui/: WebUI.test.cxx
tests/wifi/: WifiLogic.test.cxx  WifiManager.test.cxx
(+47 files in other folders)
